--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,102 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+    /*1 rem = a 10px*/
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*Global*/
+
+body {
+    font-size: 1.6rem;
+    line-height: 2;
+}
+
+
+h1,
+h2,
+h3 {
+
+    margin: 0 0 5rem 0;
+    font-family: "Playfair", serif;
+
+}
+
+
+h1 {
+    font-size: 5rem;
+    color: #fff;
+}
+
+h2 {
+    font-size: 4rem;
+}
+
+h3 {
+    font-size: 3rem;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    text-decoration: none;
+    color: #000;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+img {
+    /*Esto sirve para la imagen ya que le dice que solo tome el 100% del div o contenedor en el que se encuentra*/
+    max-width: 100%;
+
+    /*Cubre todo el ancho con el max-whit pero le falta en altura asi que eso se arregla con display block*/
+    display: block;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.btn {
+    background-color: #8cbc00;
+    display: block;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 900;
+    padding: 1rem;
+    transition: background-color .3s ease;
+    text-align: center;
+    border: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.btn:hover {
+    background-color: #769c02;
+    cursor: pointer;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+/**Utilidades**/
+
+.text-center {
+    text-align: center;
+}
+
+
+.container {
+    max-width: 120rem;
+    margin: 0 auto;
+}
+
+
+.text-margin-top {
+    margin-top: 5rem;
+}
+
+.text-margin-bottom {
+    margin-bottom: 5rem;
+}
+
+.main-header {
+    background-color: #041f4a;
+    padding: 1rem;
+    color: #fff;
+    text-align: center;
 }
